# pepctl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Packages  README.md  pepctl_1.0.0-1_amd64.deb
.github/workflows/: ci.yml
configs/: README.md  development.json  loopback.json  production.json  testing.json
debian/: changelog  postinst  prerm
docs/: ADMIN_API.md  ANSWER_TRADITIONAL_HEADERS_PROBLEM.md  BTF_EXPLAINED.md  BTF_GENERATION_EXPLAINED.md  CODING_STYLE.md  DETAILED_EXPLANATION_BPF_MACROS_AND_STRUCTURES.md  EBPF_CMAKE_INTEGRATION.md  EBPF_INTERNALS.md  FUNCTIONAL_REQUIREMENTS.md  INTERNAL_LOGIC.md  LOGGER_ARCHITECTURE.md  METRICS_SERVER_ARCHITECTURE.md  MODERN_EBPF_HEADERS.md  MONITORING_STACK.md  PEPCTL_SYSTEMD_SERVICE_COMPLETE.md  POLICY_ENGINE_DETAILED.md  PROCESS_MONITORING.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  TEST_SUITES.md  TRADITIONAL_vs_VMLINUX_HEADERS.md  prometheus_queries_guide.md
ebpf/: CMakeLists.txt  packet_filter.c  vmlinux.h
include/pepctl/: ebpf_manager.h  logger.h  metrics_server.h  policy_engine.h
monitoring/: docker-compose.monitoring.yml  import-dashboard.sh  setup-monitoring.sh  update_dashboard_colors.sh
monitoring/grafana/provisioning/dashboards/: dashboard.yml  pepctl-dashboard.json  pepctl-dashboard.json.backup.20250616_160235
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
packaging/: README.md
packaging/debian/: control  debhelper-build-stamp  files  pepctl.postrm.debhelper  pepctl.substvars  postinst  postrm  preinst  rules
packaging/debian/.debhelper/pepctl/: dbgsym-build-ids
packaging/debian/.debhelper/pepctl/dbgsym-root/DEBIAN/: control  md5sums
packaging/debian/.debhelper/pepctl/dbgsym-root/usr/share/doc/: pepctl-dbgsym
packaging/debian/pepctl/DEBIAN/: control  md5sums
packaging/debian/pepctl/lib/systemd/system/: pepctl.service
packaging/debian/pepctl/usr/share/pepctl/policies/: development.json  production.json  testing.json
policies/: README.md  loopback.json  production.json  sbc_work.json
scripts/: README.md  build.sh  convert-to-camelcase.sh  explicit-bool-fix.sh  format-code.sh  generate_real_traffic.sh  help.sh  install_deps.sh  manage_policies.sh  package-deb.sh  start_pepctl.sh  stop_pepctl.sh  update-version.sh
src/: CMakeLists.txt  core.cpp  ebpf_manager.cpp  logger.cpp  main.cpp  metrics_server.cpp  policy_engine.cpp  utils.cpp
src/pepctl/: core.h  ebpf_manager.h  logger.h  metrics_server.h  policy_engine.h
systemd/: pepctl.service
tests/: CMakeLists.txt  sbc_traffic_forever.sh  test_config.json  test_config_real_interface.json  test_core.cpp  test_logger.cpp  test_metrics.cpp  test_policy_enforcement.sh  test_policy_engine.cpp  test_traffic_generator.sh  test_unified.sh  test_utils.cpp  test_utils.h
tests/integration/: CMakeLists.txt  integration_test.cpp  run_tests.sh  test_client.cpp
